--- a/roles/wireguard/tasks/install.yml
+++ b/roles/wireguard/tasks/install.yml
@@ -1,5 +1,16 @@
 ---
 
+- name: Add Debian backports on Debian 10
+  apt_repository:
+    repo: deb http://deb.debian.org/debian buster-backports main contrib non-free
+    filename: debian-backports
+  when: ansible_distribution == "Debian" and ansible_distribution_major_version == '10'
+
+- name: Install linux headers for current kernel on Debian 10
+  apt:
+    name: "linux-headers-{{ ansible_kernel }}"
+  when: ansible_distribution == "Debian" and ansible_distribution_major_version == '10'
+
 - name: Install wireguard package (Debian/Ubuntu)
   apt:
     name: wireguard
