--- a/roles/wireguard/tasks/main.yml
+++ b/roles/wireguard/tasks/main.yml
@@ -4,10 +4,9 @@
 
 - name: Handle the public/private key generation
   include_tasks: key-generation.yml
-  when: item.handle_key_generation|bool
+  when: item.handle_key_generation|default(true)|bool
   loop: "{{ wg_ifaces }}"
 
 - name: Setup the wireguard interfaces and bring them up
   include_tasks: network-config.yml
   loop: "{{ wg_ifaces }}"
-
