--- a/roles/yggdrasil/meta/main.yml
+++ b/roles/yggdrasil/meta/main.yml
@@ -17,7 +17,7 @@ galaxy_info:
         - stretch
         - buster
         - sid
-    - name: Fedora    # Depends on redhat-lsb-core
+    - name: Fedora
       versions:
         - 28
         - 29
@@ -26,7 +26,7 @@ galaxy_info:
         - xenial
         - bionic
         - cosmic
-    - name: ArchLinux # Depends on python and lsb-release and some aur tool
+    - name: ArchLinux # Depends on some aur tool
       versions:
         - any
 
